Fixed JS formatting from build script & links in popup Changed "more info" explenation & set default altmode to toggle Removed scrollbar and changed to gradient on bottom of popup Added 2 icons as settings icon & escape key to close settings (not popup) Finalized license

--- a/src/content/content.css
+++ b/src/content/content.css
@@ -101,6 +101,15 @@
     }
 }
 
+#more {
+    display: none;
+
+    & li {
+        list-style: disc;
+        margin-left: 1rem;
+    }
+}
+
 .shortcutEditorPopup>label {
     display: block;
     margin-bottom: .3rem;
