--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,3 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+html {
+    /* hide scrollbar Firefox */
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+        /* Chrome & Safari */
+        display: none;
+    }
+
+    /* white gradient on bottom */
+    &::after {
+        content: "";
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        z-index: 2;
+        width: 100%;
+        height: 150px;
+
+        background: linear-gradient(to bottom, transparent, white);
+        /* allow scrolling through */
+        pointer-events: none;
+    }
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     width: 250px;
@@ -16,6 +43,13 @@ header {
     justify-content: space-between;
 }
 
+
+footer {
+    padding-top: 16px;
+    margin-top: 16px;
+    border-top: 1px solid #eaeaea;
+}
+
 .panel {
     margin-top: 8px;
     padding: 12px;
@@ -25,10 +59,42 @@ header {
     background: #fafafa;
 }
 
+div#feedback.panel {
+    padding: 15px !important;
+    margin-top: 0;
+    margin-bottom: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+
+    transition: color .2s, background-color .2s;
+    user-select: none;
+
+    position: relative;
+    z-index: 3;
+
+    &:hover {
+        background-color: #333333;
+        color: #ffffff;
+    }
+
+    & h3 {
+        margin-top: 0;
+        margin-bottom: 0;
+        line-height: 13px;
+        color: inherit;
+    }
+
+    & svg {
+        padding: 0;
+    }
+}
 
 h2 {
+    font-family: "Open Sans", sans-serif;
     margin-top: 0;
-    font-size: 16px;
+    font-size: 16.5px;
     margin-bottom: 0;
     color: #1a1a1a;
 }
@@ -94,7 +160,26 @@ svg {
 
     padding: 0.5rem 0rem 0.5rem 0.5rem;
     cursor: pointer;
+
+    &.settings-icon {
+        display: block;
+    }
+
+    &.home-icon {
+        display: none;
+    }
 }
+
+#settingsToggle[data-icon='home'] {
+    &>svg.settings-icon {
+        display: none;
+    }
+
+    &>svg.home-icon {
+        display: block;
+    }
+}
+
 
 label {
     display: inline-flex;
@@ -117,4 +202,13 @@ input[type="checkbox"] {
     transform: scale(1.05);
     accent-color: #0b4fa0;
     cursor: pointer;
+}
+
+img.coffee {
+    scale: 0.8;
+    transition: scale .4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+
+    &:hover {
+        scale: 1;
+    }
 }
